<resources>
    <string name="app_name">Seller Assistant</string>
    <string name="base_url">http://ustyle.kz</string>
    <string name="image_url">image</string>
    <string name="image_flags_url">flags</string>
    <string name="default_language_id_pref">DEFAULT_LANGUAGE</string>
    <string name="default_language_id">1</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_seller">Seller</string>
    <string name="action_clients">Clients</string>
    <string name="action_orders">Orders</string>
    <string name="action_dictionaries">Dictionaries</string>

    <string name="cart_total_text">Total:</string>
    <string name="cart_total_no_items">0,00</string>
    <string name="cart_process">Process</string>
    <string name="cart_erase">Clear</string>

    <string name="items_back_menu_text">Back</string>

    <string name="dialog_wait_title">Please wait</string>
    <string name="dialog_wait_add_to_cart_message">Adding item to cart...</string>
    <string name="dialog_wait_load_items_from_db">Loading products and categories from database...</string>
    <string name="dialog_wait_clearing_basket">Clearing the basket...</string>
    <string name="dialog_wait_delete_element_from_basket">Delete item from basket...</string>
    <string name="dialog_wait_reload_orders_from_server">Reload orders...</string>

    <string name="settings_seller_phone">Phone number</string>
    <string name="settings_seller_name">Seller name</string>
    <string name="settings_seller_email">Email</string>
    <string name="settings_seller_sex">Sex</string>
    <string name="settings_language">Language</string>

    <string name="prompt_email">Email (optional)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="isSendNewsToEmail">I want to receive news on my email</string>
    <string name="savePrivateSettings">Save settings</string>

    <string name="orders_order_number">Order: %s</string>
    <string name="orders_order_client_info">Client: %1$s %2$s</string>
    <string name="orders_total_sum">Total sum: %.2f</string>

    <string name="error_message_load_categories_and_products">Error loading products and categoriers: %s</string>
    <string name="error_message_update_categories">Error on update categories: %s</string>
</resources>
