<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="@string/action_orders"/>
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_featured_play_list_black_48dp"
            android:title="@string/action_orders"/>
        <item
            android:id="@+id/nav_clients"
            android:icon="@drawable/ic_people_black_48dp"
            android:title="@string/action_clients"/>
        <item
            android:id="@+id/nav_sellers"
            android:icon="@drawable/ic_person_pin_black_48dp"
            android:title="@string/action_seller"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/action_settings"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"/>
        </menu>
    </item>

</menu>
